tests/src/frontend/typechecking/invalid/typeconst_12.sk
base class Foo<T: Test.MixedScalar>

base class Baz {
  type T: Test.MixedScalar;
}

class Bar() extends Foo<this::T::T> {
  type T = Baz;
}
